Change hooks for serverless rack plugin and sinatra

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "augmented-spotify-api",
   "author": "Leonardo Alifraco <leonardo.alifraco@gmail.com>",
   "license": "ISC",
-  "dependencies": {
-    "serverless-hooks-plugin": "^1.1.0"
+  "dependencies": {},
+  "devDependencies": {
+    "serverless-rack": "^1.0.0"
   }
 }
