--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "serverless-dotenv-plugin": "^2.0.1",
     "serverless-rack": "^1.0.0"
   }
 }
