--- a/serverless.yml
+++ b/serverless.yml
@@ -3,6 +3,7 @@ service: augmented-spotify-api
 provider:
   name: aws
   runtime: ruby2.5
+  region: ${env:AWS_REGION}
 
 functions:
   api:
@@ -13,3 +14,4 @@ functions:
 
 plugins:
   - serverless-rack
+  - serverless-dotenv-plugin
