--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,16 @@ provider:
   name: aws
   runtime: ruby2.5
   region: ${env:AWS_REGION}
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+       - dynamodb:Query
+       - dynamodb:Scan
+       - dynamodb:GetItem
+       - dynamodb:PutItem
+       - dynamodb:UpdateItem
+       - dynamodb:DeleteItem
+      Resource: ${env:DYNAMODB_METADATA_ARN}
 
 functions:
   api:
